feat: restructure auth service clean architecture
